Agregando texto al html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quis quas sequi optio, quo perferendis suscipit vel alias id aliquam odit laudantium reprehenderit blanditiis fugit, quidem tempore, doloribus in delectus!</p>
 </body>
 </html>
