--- a/pages/aplicacion.html
+++ b/pages/aplicacion.html
@@ -40,14 +40,29 @@
 		</div>
 	</nav>
 	</header>
-	<div class="row">
-		<div class="container">
-			<h1 class="tituloAplicacion">Descarga la Aplicación y comenza a disfrutar!</h1>
-		</div>
-		<div class="w-100"></div>
-		<img class="col-2 align-self-center imagenDescarga" src="http://placehold.it/250x150" alt="">
-		<img class="col-2 align-self-center imagenDescarga" src="http://placehold.it/250x150" alt="">
+	<div>
+		<h1 class="tituloAplicacion"> Descarga la APP en tu celular!</h1>
 	</div>
+	<div class="container">
+	<div class="row">
+	<div class="col-lg-6 mb-6">
+	<div class="card-body text-center">
+		<img src="../images/appstore.jpg" alt="App Store" class="imagenAplicacion">
+		<p class="card-text">Version 1.0.0.1.</p>
+		<a href="https://www.apple.com/la/app-store/" class="btn btn-primary">Descarga</a>
+		</div>
+	</div>
+	<div class="col-lg-6 mb-6">
+	<div class="card-body text-center">
+		<img src="../images/googleplay.png" alt="Google Play" class="imagenAplicacion">
+		<p class="card-text">Version 1.0.0.3.</p>
+		<a href="https://play.google.com/store?hl=es" class="btn btn-primary">Descarga</a>
+		</div>
+	</div>
+	</div>
+	</div>
+	</div>
+</div>
 	<hr>
 	<footer>Trabajo Final Coderhouse - Manuel Festa</footer>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
